// 
// Copyright 2017 SpecRPC authors                                                                           
//                                                                                                                       
// Licensed under the Apache License, Version 2.0 (the "License");                                                      
// you may not use this file except in compliance with the License.                                                     
// You may obtain a copy of the License at                                                                              
//                                                                                                                      
//     http://www.apache.org/licenses/LICENSE-2.0                                                                       
//                                                                                                                      
// Unless required by applicable law or agreed to in writing, software                                                  
// distributed under the License is distributed on an "AS IS" BASIS,                                                    
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.                                             
// See the License for the specific language governing permissions and                                                  
// limitations under the License. 
//

syntax = "proto3";

option java_multiple_files = true;
option java_package = "micro.grpc";
option java_outer_classname = "MicroGrpc";

package micro.grpc;

service MicroService {
  rpc oneHop (OneHopRequest) returns (Response);
  rpc multiHop (MultiHopRequest) returns (Response);
}

message OneHopRequest {
  string data = 1;
}

message MultiHopRequest {
  string data = 1;
  int32 hopNum = 2;
}

message Response {
  string data = 1;
}
